--- a/src/components/ProductsList/ProductsList.css
+++ b/src/components/ProductsList/ProductsList.css
@@ -1,3 +1,11 @@
 .ProductsList {
   width: 100%;
 }
+
+.ProductsList__list {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start; 
+}
