--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -2,8 +2,7 @@
   background-color: gray;
   width: 220px;
   border: 1px solid gray;
-  margin: 2px;
-  text-align: center;
+  margin: 5px;
 }
 
 .Product__image {
@@ -13,7 +12,7 @@
 
 .Product__img-wrapper {
   overflow: hidden;
-  width: 220px;
+  width: 100%;
   height: 150px;
   background-size: cover;
   background-position: center center;
