--- a/src/components/ProductsList/ProductsList.css
+++ b/src/components/ProductsList/ProductsList.css
@@ -9,3 +9,14 @@
   justify-content: space-between;
   align-items: flex-start; 
 }
+
+.ProductsList__heading {
+  margin: 0;
+}
+
+.ProductsList__top-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
