--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,6 +3,9 @@
   width: 220px;
   border: 1px solid gray;
   margin: 5px;
+  box-shadow: 2px 2px 6px rgba(0,0,0,.8);
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .Product__image {
