--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -2,7 +2,7 @@
   background-color: gray;
   width: 220px;
   border: 1px solid gray;
-  margin: 5px;
+  margin: 5px 5px 10px;
   box-shadow: 2px 2px 6px rgba(0,0,0,.8);
   border-radius: 8px;
   overflow: hidden;
