working plain-text login component. can log in and log out

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,6 +38,7 @@ header {
   color: white;
   border-bottom: 1px solid transparent;
   transition: all .3s;
+  cursor: pointer;
 }
 
 .Header__nav-link:hover {
