fixed empty href warning in Header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -39,6 +39,7 @@ header {
   border-bottom: 1px solid transparent;
   transition: all .3s;
   cursor: pointer;
+  display: inline;
 }
 
 .Header__nav-link:hover {
