--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -6,7 +6,13 @@
   background-color: #FFFBFE;
   padding: 10px;
   border-radius: 8px;
-  box-shadow: 2px 2px 6px rgba(0,0,0,.8)
+  box-shadow: 2px 2px 6px rgba(0,0,0,.8);
+  animation: fade-in .5s linear;
+  transition: opacity .5s;
+}
+
+.Login--leaving {
+  opacity: 0;
 }
 
 .Login__close {
@@ -78,8 +84,6 @@
 .Login__submit:hover, .Login__register:hover {
   background-color: #68C5DB;
 }
-
-
 
 
 
