--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,14 +1,15 @@
 .Login {
   position: fixed;
   top: 80px;
-  right: 10%;
+  left: 50%;
+  margin-left: -200px;
   width: 400px;
   background-color: #FFFBFE;
   padding: 10px;
   border-radius: 8px;
   box-shadow: 2px 2px 6px rgba(0,0,0,.8);
-  animation: fade-in .5s linear;
-  transition: opacity .5s;
+  animation: fade-in .3s linear;
+  transition: opacity .3s;
 }
 
 .Login--leaving {
