--- a/src/components/SellProduct/SellProduct.css
+++ b/src/components/SellProduct/SellProduct.css
@@ -11,7 +11,7 @@
   padding: 15px;
 }
 
-.SellProduct__submit--container{
+.SellProduct__submit{
   display: flex;
   align-content: center;
   justify-content: center;
