--- a/src/components/SellProduct/SellProduct.css
+++ b/src/components/SellProduct/SellProduct.css
@@ -18,12 +18,12 @@
   padding: 25px;
 }
 
-label {
+.SellProduct__label {
   display: inline-block;
   width: 140px;
   text-align: right;
 }
 
-textarea {
+.SellProduct__textarea {
   resize: none;
 }
