removed extra css code lines, removed console logs

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -32,10 +32,6 @@
   align-items: center;
 }
 
-.Product__info-wrapper a {
-  text-decoration: none;
-  color: black;
-}
 
 .Product__info-wrapper h4 {
   margin: 0;
@@ -44,7 +40,6 @@
 .Product__price-wrapper {
   flex-basis: 20%;
   text-align: right;
-  text-decoration: none;
   color: black;
 }
 
@@ -52,10 +47,9 @@
   flex-basis: 80%;
   text-align: left;
   padding-left: 2px;
-  text-decoration: none;
   color: black;
 }
 
-a {
+.Product__link {
   text-decoration: none;
 }
