--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -11,10 +11,16 @@
   display: flex;
 }
 
+.ProductDetail__image-wrapper {
+  width: 300px;
+}
+
 .ProductDetail__image {
   flex: 1;
   margin: 10px;
   border: solid black 2px;
+  background-size: cover;
+  width: 100%;
 }
 
 .ProductDetail__info-container {
@@ -22,11 +28,6 @@
   border: solid black 2px;
   padding: 10px;
   margin: 10px;
-}
-
-.ProductDetail__image {
-  height: 250px;
-  width: 300px;
 }
 
 .ProductDetail__review-container {
