--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -9,7 +9,7 @@
 }
 
 .Product:hover {
-  box-shadow: 4px 4px 8px rgba(0,0,0,.8);
+  box-shadow: 1px 1px 8px 2px rgba(0,0,0,.6);
 }
 
 .Product__image {
