--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,6 +19,10 @@ header {
 
 .Header__logo {
   margin: 0;
+  font-size: 2.5rem;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .Header__nav {
