--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,13 @@ html, body {
 
 body {
   padding-top: 80px;
-  background-color: #B80C09;
+  background-color: #86bd70;
+  color: black;
   font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Oswald', sans-serif
+  font-family: 'Oswald', sans-serif;
 }
 
 @keyframes fade-in {
