styling for star is product component, and fixed requested changes from previous PR

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -6,6 +6,7 @@
   overflow: hidden;
   box-shadow: 4px 4px 8px rgba(0,0,0,0);
   transition: all .3s;
+  position: relative;
 }
 
 .Product:hover {
@@ -63,4 +64,10 @@
 
 .Product__link {
   text-decoration: none;
+}
+
+.Product__stars {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
 }
