--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -10,6 +10,7 @@
   box-shadow: 2px 2px 6px rgba(0,0,0,.8);
   animation: fade-in .3s linear;
   transition: opacity .3s;
+  z-index: 20;
 }
 
 .Login--leaving {
