--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -5,6 +5,13 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  position: relative;
+}
+
+.ProductDetail__deleteButton {
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
 
 .ProductDetail__details-container {
