--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,11 +11,12 @@
 
 header {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   max-width: 1000px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .Header__logo {
@@ -35,7 +36,7 @@ header {
   display: inline-block;
   font-family: 'Oswald', sans-serif;
   font-size: 1.3rem;
-  margin: 0 15px;
+  margin: 0 0 0 15px;
 }
 
 .Header__nav-link {
