--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ body {
   background: linear-gradient(#e66465, #9198e5);
   color: black;
   font-family: 'Open Sans', sans-serif;
+  min-height: 100vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
