--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -4,7 +4,7 @@
   margin-top: 10%;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #FFFBFE;
   position: relative;
   z-index: 1;
   border-radius: 8px;
@@ -16,13 +16,13 @@
 
 .ProductDetail__deleteButton {
   position: absolute;
-  top: 15px;
+  top: 5px;
   right: 15px;
 }
 
 .ProductDetail__editButton {
   position: absolute;
-  top: 15px;
+  top: 5px;
   right: 75px;
 }
 
