--- a/src/components/SellProduct/SellProduct.css
+++ b/src/components/SellProduct/SellProduct.css
@@ -1,8 +1,9 @@
 .SellProduct__wrapper{
   width: 75%;
   margin: 0 auto;
-  background-color: white;
+  background-color: #FFFBFE;
   border: 1px solid gray;
+  border-radius: 8px;
 }
 
 .SellProduct__field{
