--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -56,6 +56,10 @@
   margin: 10px;
 }
 
+.ProductDetail__review-container .Review__wrapper {
+  border: 1px solid lightgray;
+}
+
 .ProductDetail__info-heading {
   display: flex;
   justify-content: space-between;
@@ -73,4 +77,15 @@
   color: dimgray;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.ProductDetail__seller-link {
+  color: black;
+  text-decoration: none;
+  border-bottom: 1px solid dimgray;
+  transition: all .3s;
+}
+
+.ProductDetail__seller-link:hover {
+  border-bottom: 1px solid #e66465;
 }
