--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -1,8 +1,8 @@
 .Review__wrapper {
-  border: solid dimgray;
   border-radius: 8px;
   margin: 10px;
   padding: 10px 20px;
+  background-color: #FFFBFE;
 }
 
 .Review__top-wrapper {
@@ -26,4 +26,15 @@
   font-size: 10pt;
   color: dimgray;
   text-align: right;
+}
+
+.Review__seller-link {
+  text-decoration: none;
+  color: black;
+  border-bottom: 1px solid dimgray;
+  transition: all .3s;
+}
+
+.Review__seller-link:hover {
+  border-bottom: 1px solid #e66465;
 }
