used background colors on links and buttons throughout site

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,7 +22,7 @@ header {
 .Header__logo {
   margin: 0;
   font-size: 2.5rem;
-  background: linear-gradient(#eee, #333);
+  background: linear-gradient(#e66465, #9198e5);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
