--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -82,10 +82,10 @@
 .ProductDetail__seller-link {
   color: black;
   text-decoration: none;
-  border-bottom: 1px solid dimgray;
+  border-bottom: 2px solid #9198e5;
   transition: all .3s;
 }
 
 .ProductDetail__seller-link:hover {
-  border-bottom: 1px solid #e66465;
+  border-bottom: 2px solid #e66465;
 }
