--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -31,12 +31,12 @@
 .Review__seller-link {
   text-decoration: none;
   color: black;
-  border-bottom: 1px solid dimgray;
+  border-bottom: 2px solid #9198e5;
   transition: all .3s;
 }
 
 .Review__seller-link:hover {
-  border-bottom: 1px solid #e66465;
+  border-bottom: 2px solid #e66465;
 }
 
 .Review__comment {
