--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -1,7 +1,7 @@
 .ProductDetail__container {
   display: flex;
   flex-direction: column;
-  margin-top: 10%;
+  margin-top: 10px;
   width: 100%;
   height: 100%;
   background-color: #FFFBFE;
