--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,20 +1,22 @@
 footer {
   position: fixed;
-  padding: 3px;
+  padding: 3px 10px 3px 3px;
   border-radius: 12px 0 0 0;
   bottom: 0;
-  right: -200px;
-  width: 230px;
+  right: -210px;
+  width: 240px;
   background-color: #FFFBFE;
   font-size: 1.5rem;
   line-height: 1em;
   display: flex;
-  /*justify-content: space-between;*/
   align-items: center;
+  box-shadow: 0 0 4px rgba(0,0,0,0);
   transition: all .3s;
+  z-index: 20;
 }
 
 .footer--visible {
+  box-shadow: 0 0 5px 2px rgba(0,0,0,.7);
   right: 0;
 }
 
@@ -34,7 +36,3 @@ footer {
   color: black;
   text-decoration: none;
 }
-
-/*.footer__content--visible {
-  width: 200px;
-}*/
