--- a/src/components/UserProduct/UserProduct.css
+++ b/src/components/UserProduct/UserProduct.css
@@ -7,6 +7,7 @@
   max-width: 450px;
   box-shadow: 4px 4px 8px rgba(0,0,0,0);
   transition: all .3s;
+  animation: fade-in .3s linear;
 }
 
 .UserProduct:hover {
