--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,13 +10,12 @@ footer {
   line-height: 1em;
   display: flex;
   align-items: center;
-  box-shadow: 0 0 4px rgba(0,0,0,0);
+  box-shadow: 0 0 5px 2px rgba(0,0,0,.7);
   transition: all .3s;
   z-index: 20;
 }
 
-.footer--visible {
-  box-shadow: 0 0 5px 2px rgba(0,0,0,.7);
+footer:hover {
   right: 0;
 }
 
